2013-02-15  Adenilson Cavalcanti  <cavalcantii@gmail.com>

        [WK2] Write a test to simulate crashed WebProcess followed by Window resize
        https://bugs.webkit.org/show_bug.cgi?id=109842

        Reviewed by Benjamin Poulain.

        This new test will kill WebProcess, followed by next resizing the Window. It helps to
        identify if the port is testing for WebPageProxy data members state (e.g. DrawingArea, Frames)
        before making calls into them.

        * TestWebKitAPI/GNUmakefile.am:
        * TestWebKitAPI/PlatformEfl.cmake:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2/ResizeWindowAfterCrash.cpp: Added.
        (TestWebKitAPI):
        (TestWebKitAPI::didFinishLoad):
        (TestWebKitAPI::didCrash):
        (TestWebKitAPI::TEST):

2013-02-15  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        Add CString operators for comparison with const char*
        https://bugs.webkit.org/show_bug.cgi?id=109947

        Reviewed by Darin Adler.

        Add tests for WTF::CString's comparison operators.

        * TestWebKitAPI/Tests/WTF/CString.cpp:
        (TEST):

2013-02-15  Zan Dobersek  <zdobersek@igalia.com>

        webkit-patch suggest-reviewers should limit itself to 5 reviewers
        https://bugs.webkit.org/show_bug.cgi?id=107528

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/checkout.py:
        (Checkout.suggested_reviewers): Iterate through the sorted commit info list,
        scraping reviewers from the commit information and in the end producing a list
        of reviewers that's sorted from the most to least recent activity of any reviewer
        that has reviewed or authored patches for the changed files.
        * Scripts/webkitpy/tool/commands/queries.py:
        (SuggestReviewers): Use the SuggestReviewers step instead of reimplementing much of
        the same logic.